nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port
spec:
  type: NodePort
  selector:
    app: nginx 
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30000
