nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: localhost   
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-node-port
            port:
              number: 80
